# controllers/account/user.go
@@ -158,8 +158,10 @@ func (c *UserController) AuthSpotifyUser(ctx *fiber.Ctx) error {
 	}
 	log.Printf("%v", user)
 
+	userProfile := &blueprint.User{}
+
 	query := queries.CreateUserQuery
-	_, dbErr := c.DB.Exec(
+	newUser := c.DB.QueryRowx(
 		query,
 		user.Email,
 		user.DisplayName,
@@ -168,6 +170,7 @@ func (c *UserController) AuthSpotifyUser(ctx *fiber.Ctx) error {
 		user.ID,
 	)
 
+	dbErr := newUser.StructScan(userProfile)
 	if dbErr != nil {
 		log.Printf("\n[controller][account][user][spotify]: [AuthUser] Error executing query: %v\n", dbErr)
 		return util.ErrorResponse(ctx, http.StatusInternalServerError, dbErr)
@@ -194,7 +197,7 @@ func (c *UserController) AuthSpotifyUser(ctx *fiber.Ctx) error {
 	claim := &blueprint.OrchdioUserToken{
 		Email:    user.Email,
 		Username: user.DisplayName,
-		UUID:     uniqueID,
+		UUID:     userProfile.UUID,
 		Platform: "spotify",
 	}
 	token, err := util.SignJwt(claim)
@@ -268,18 +271,12 @@ func (c *UserController) AuthDeezerUser(ctx *fiber.Ctx) error {
 		return util.ErrorResponse(ctx, http.StatusInternalServerError, err)
 	}
 
-	// for lack of better naming. thisn is the "temp" struct that we're scanning the result of the db upsert into
-	profScan := struct {
-		Email    string
-		Username string
-		UUID     uuid.UUID
-	}{}
-
+	userProfile := &blueprint.User{}
 	// TODO: here, check if the user is already in the DB, in that case, we just update platform username
 
 	log.Printf("[user][controller][AuthDeezerUser] Running create user query: '%s' with '%s', '%s', '%s' \n", queries.CreateUserQuery, user.Email, user.Name, uniqueID)
 	deezerID := strconv.Itoa(user.ID)
-	userProfile := c.DB.QueryRowx(queries.CreateUserQuery,
+	newUser := c.DB.QueryRowx(queries.CreateUserQuery,
 		user.Email,
 		user.Name,
 		uniqueID,
@@ -287,7 +284,7 @@ func (c *UserController) AuthDeezerUser(ctx *fiber.Ctx) error {
 		deezerID,
 	)
 
-	scanErr := userProfile.StructScan(&profScan)
+	scanErr := newUser.StructScan(userProfile)
 
 	if scanErr != nil {
 		log.Printf("[user][controller][AuthDeezerUser] could not upsert createUserQuery. %v\n", scanErr)
@@ -315,7 +312,7 @@ func (c *UserController) AuthDeezerUser(ctx *fiber.Ctx) error {
 	claims := &blueprint.OrchdioUserToken{
 		Email:    user.Email,
 		Username: user.Name,
-		UUID:     profScan.UUID,
+		UUID:     userProfile.UUID,
 		Platform: "deezer",
 	}
 
@@ -445,7 +442,10 @@ func (c *UserController) AuthAppleMusicUser(ctx *fiber.Ctx) error {
 	// get the hash as a string
 	hashedEmail := hex.EncodeToString(hash.Sum(nil))
 
-	_, err = c.DB.Exec(queries.CreateUserQuery, bod.Email, displayname, uniqueID, encryptedRefreshToken, hashedEmail)
+	userProfile := &blueprint.User{}
+	newUser := c.DB.QueryRowx(queries.CreateUserQuery, bod.Email, displayname, uniqueID, encryptedRefreshToken, hashedEmail)
+
+	err = newUser.StructScan(userProfile)
 	if err != nil {
 		log.Printf("[user][controller][AuthAppleMusicUser] Method - Error creating user: %v", err)
 		return util.ErrorResponse(ctx, http.StatusInternalServerError, err)
@@ -471,10 +471,11 @@ func (c *UserController) AuthAppleMusicUser(ctx *fiber.Ctx) error {
 		return err
 	}
 
+	// HACK: this seems redundant and quite not hygienic. here, we check again for the user's profile and return it. normally, we could do this
 	claim := &blueprint.OrchdioUserToken{
 		Email:    bod.Email,
 		Username: displayname,
-		UUID:     uniqueID,
+		UUID:     userProfile.UUID,
 		Platform: "applemusic",
 	}
 
@@ -545,7 +546,7 @@ func (c *UserController) GenerateAPIKey(ctx *fiber.Ctx) error {
 	// first fetch user
 	user, err := database.FindUserByEmail(claims.Email, claims.Platform)
 	existingKey, err := database.FetchUserApikey(user.Email)
-	if err != nil {
+	if err != nil && err != sql.ErrNoRows {
 		log.Printf("[controller][user][GenerateApiKey] could not fetch api key from db. %v\n", err)
 		return util.ErrorResponse(ctx, http.StatusInternalServerError, err)
 	}
@@ -566,7 +567,7 @@ func (c *UserController) GenerateAPIKey(ctx *fiber.Ctx) error {
 	)
 
 	if dbErr != nil {
-		log.Printf("\n[controller][account][user] : [AuthUser] Error executing query: %v\n. Could not create new key", dbErr)
+		log.Printf("\n[controller][account][user][AuthUser] Error executing query: %v\n. Could not create new key", dbErr)
 		return util.ErrorResponse(ctx, http.StatusInternalServerError, err)
 	}
 
@@ -575,7 +576,6 @@ func (c *UserController) GenerateAPIKey(ctx *fiber.Ctx) error {
 	}
 	log.Printf("[controller][accounnt][user]: Created a new api key for user\n")
 	return util.SuccessResponse(ctx, http.StatusCreated, response)
-
 }
 
 // RevokeKey revokes an api key.
@@ -681,17 +681,12 @@ func (c *UserController) DeleteKey(ctx *fiber.Ctx) error {
 	apiKey := ctx.Get("x-orchdio-key")
 	database := db.NewDB{DB: c.DB}
 
-	deletedKey, err := database.DeleteApiKey(apiKey, claims.UUID.String())
+	deletedKey, err := database.DeleteApiKey(apiKey)
 	if err != nil {
 		log.Printf("[controller][user][DeleteKey] - error deleting Key from database %s\n", err.Error())
 		return util.ErrorResponse(ctx, http.StatusInternalServerError, "An unexpected error")
 	}
-
-	if len(deletedKey) == 0 {
-		log.Printf("[controller][user][DeleteKey] - key already deleted")
-		return util.ErrorResponse(ctx, http.StatusNotFound, "Key not found. You already deleted this key")
-	}
-
+	
 	log.Printf("[controller][user][DeleteKey] - deleted key for user %v\n", claims)
 	return util.SuccessResponse(ctx, http.StatusOK, string(deletedKey))
 }
